# C_inputlib

./: CMakeLists.txt  README.md  inputlib.c  inputlib.h
include/: inputlib.h
src/: inputlib.c
